@@ -39,12 +39,7 @@
 #include <linux/smp.h>
 #include <linux/rwsem.h>
 #include <libcfs/kp30.h>
-
-# if (LINUX_VERSION_CODE >= KERNEL_VERSION(2,5,0))
-#  include <linux/statfs.h>
-# else 
-#  define kstatfs statfs
-# endif
+#include <linux/statfs.h>
 
 #else 
 #  define kstatfs statfs
