@@ -29,18 +29,12 @@
 
 #ifdef __KERNEL__
 #include <linux/version.h>
-#if (LINUX_VERSION_CODE < KERNEL_VERSION(2,5,0))
-#include <linux/tqueue.h>
-#else
 #include <linux/workqueue.h>
-#endif
 #endif
 
 /* XXX Liang: should be moved to other header instead of here */
-#if LINUX_VERSION_CODE >= KERNEL_VERSION(2,6,4)
 #ifndef WITH_GROUP_INFO
 #define WITH_GROUP_INFO
-#endif
 #endif
 
 #endif
