@@ -51,7 +51,7 @@ void obdo_refresh_inode(struct inode *dst, struct obdo *src, obd_flag valid);
 void obdo_to_inode(struct inode *dst, struct obdo *src, obd_flag valid);
 #endif
 
-#if !defined(__KERNEL__) || (LINUX_VERSION_CODE < KERNEL_VERSION(2,5,0))
+#if !defined(__KERNEL__)
 #define to_kdev_t(dev) dev
 #define kdev_t_to_nr(dev) dev
 #endif
